--- a/index.html
+++ b/index.html
@@ -8,47 +8,47 @@
 <td width=18% align=center>
     <marquee bgcolor="red">Żur</marquee>      
     <h4>linki do zadań</h4>                                                                                                                                      
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad2_żur\zadanie2_żur.html" target="strony">Zadanie 2</a>
+<a href="zadanie2_żur.html" target="strony">Zadanie 2</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad3_żur\zadanie3_żur.html" target="strony">Zadanie 3</a>
+<a href="zadanie3_żur.html" target="strony">Zadanie 3</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad4_żur\zadanie4_żur.html" target="strony">Zadanie 4</a>
+<a href="zadanie4_żur.html" target="strony">Zadanie 4</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad5_żur\żur_z5_1.html" target="strony">Z5-importowany</a>
+<a href="żur_z5_1.html" target="strony">Z5-importowany</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad5_żur\żur_z5_2.html" target="strony">Z5-zewnętrzny</a>
+<a href="żur_z5_2.html" target="strony">Z5-zewnętrzny</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad5_żur\żur_z5_3.html" target="strony">Z5-wewnętrzny</a>
+<a href="żur_z5_3.html" target="strony">Z5-wewnętrzny</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad5_żur\żur_z5_4.html" target="strony">Z5-liniowy</a>
+<a href="żur_z5_4.html" target="strony">Z5-liniowy</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad6_żur\zur_z6.html" target="strony">Zadanie 6</a>
+<a href="zur_z6.html" target="strony">Zadanie 6</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad7_żur\zur_z7.html" target="strony">Zadanie 7</a>
+<a href="zur_z7.html" target="strony">Zadanie 7</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad8_żur\zur_z8.html" target="strony">Zadanie 8</a>
+<a href="zur_z8.html" target="strony">Zadanie 8</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad9_żur\zur_z9.html" target="strony">Zadanie 9</a>
+<a href="zur_z9.html" target="strony">Zadanie 9</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad10_żur\zur_z10.html" target="strony">Zadanie 10</a>
+<a href="zur_z10.html" target="strony">Zadanie 10</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad11_żur\zur_z11.html" target="strony">Zadanie 11</a>
+<a href="zur_z11.html" target="strony">Zadanie 11</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad12_żur\zur_z12.html" target="strony">Zadanie 12</a>
+<a href="zur_z12.html" target="strony">Zadanie 12</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad13_żur\zur_z13.html" target="strony">Zadanie 13</a>
+<a href="zur_z13.html" target="strony">Zadanie 13</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad14_żur\zur_z14.html" target="strony">Zadanie 14</a>
+<a href="zur_z14.html" target="strony">Zadanie 14</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad15_żur\zur_z15.html" target="strony">Zadanie 15</a>
+<a href="zur_z15.html" target="strony">Zadanie 15</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad16_żur\zur_z16.html" target="strony">Zadanie 16</a>
+<a href="zur_z16.html" target="strony">Zadanie 16</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad17_żur\zur_z17_p1.html" target="strony">Zadanie 17_p1</a>
+<a href="zur_z17_p1.html" target="strony">Zadanie 17_p1</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad17_żur\zur_z17_p2.html" target="strony">Zadanie 17_p2</a>
+<a href="zur_z17_p2.html" target="strony">Zadanie 17_p2</a>
 <br>
-<a href="C:\Users\uczen.KOMP_01\Desktop\strony css\zad18_żur\zur_z18.html" target="strony">Zadanie 18</a>
+<a href="zur_z18.html" target="strony">Zadanie 18</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
