--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <td width=18% align=center>
     <marquee bgcolor="red">Żur</marquee>      
     <h4>linki do zadań</h4>                                                                                                                                      
-<a HREF="zadanie2_żur.html" target="strony">Zadanie 2</a>
+<a HREF="zad2_żur/zadanie2_żur.html" target="strony">Zadanie 2</a>
 <br>
 <a HREF="zadanie3_żur.html" target="strony">Zadanie 3</a>
 <br>
