--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
 <a HREF="zad17_żur/zur_z17_p2.html" target="strony">Zadanie 17_p2</a>
 <br>
 <a HREF="zad18_żur/zur_z18.html" target="strony">Zadanie 18</a>
+<br>
+<a HREF="zad19_żur/zur_z19.html" target="strony">Zadanie 19</a>
+<br>
+<a HREF="zad20_żur/zur_z20.html" target="strony">Zadanie 20</a>
+<br>
+<a HREF="zad21_żur/zur_z21.html" target="strony">Zadanie 21</a>
+<br>
+<a HREF="zad22_żur/zur_z22.html" target="strony">Zadanie 22</a>
+<br>
+<a HREF="zad23_żur/zur_z23.html" target="strony">Zadanie 23</a>
+<br>
+<a HREF="zad24_żur/zur_z24.html" target="strony">Zadanie 24</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -65,6 +77,18 @@
     <a href="z13_kod.txt" target="strony">Z13_kod</a>
     <br>
     <a href="z15_kod.txt" target="strony">Z15_kod</a>
+    <br>
+    <a href="z18_kod.txt" target="strony">Z18_kod</a>
+    <br>
+    <a href="z19_kod.txt" target="strony">Z19_kod</a>
+    <br>
+    <a href="z20_kod.txt" target="strony">Z20_kod</a>
+    <br>
+    <a href="z21_kod.txt" target="strony">Z21_kod</a>
+    <br>
+    <a href="z22_kod.txt" target="strony">Z22_kod</a>
+    <br>
+    <a href="z23_kod.txt" target="strony">Z23_kod</a>
 </td>
 </tr>
 </table>
