--- a/zad24_żur/zur_z24.html
+++ b/zad24_żur/zur_z24.html
@@ -45,13 +45,26 @@
         <li>Courier New (monotypiczna)</li>
     </ul>
     <br>
-    2. <ul type="disc">
+    2. <ul type="circle">
         <li>Verdana</li>
         <li>Tahoma</li>
         <li>'Trebuchet MS'</li>
         <li>Georgia</li>
     </ul>
     <br>
-    3.
+    3. <ul type="disc">
+        <li>serif - <u>czcionka szeryfowa</u> (końcówki znaków posiadają "ozdobniki"), np.: 'Times 
+            New Roman', Georgia, Garamond, Bodoni</li>
+        <li>sans-serif - <u>czcionka bezszeryfowa</u> (końcówki znaków są proste), np.: Arial, Verdana, 
+            'Trebuchet MS', Helvetica, Univers, Futura</li>
+        <li>monospace - <u>czcionka o stałej szerokości znaków</u> - monotypiczna (wygląda, jak 
+            pisana na maszynie), np.: Courier, 'Courier New'</li>
+        <li>cursive - <u>czcionka mająca pewne cechy pochyłej</u> (wygląda, jak pisana ręcznie)</li>
+        <li>fantasy - <u>czcionka fantazyjna</u> (dekoracyjna)</li>
+        </ul>
+    <br>
+    4. Rodziny ogólne wykorzystuje się jako ostatnia alternatywa - jeśli użytkownik nie<br>
+    będzie posiadał żadnej czcionki, której nazwę wpisaliśmy wprost. Dlatego zwykle rodzinę<br>
+    ogólną podaje się na samym końcu listy nazw czcionek
 </body>
 </html>
