--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 <a HREF="zad23_żur/zur_z23.html" target="strony">Zadanie 23</a>
 <br>
 <a HREF="zad24_żur/zur_z24.html" target="strony">Zadanie 24</a>
+<br>
+<a HREF="zad25_żur/zur_z25.html" target="strony">Zadanie 25</a>
+<br>
+<a HREF="zad32_żur/zur_z32.html" target="strony">Zadanie 32</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -89,6 +93,8 @@
     <a href="z22_kod.txt" target="strony">Z22_kod</a>
     <br>
     <a href="z23_kod.txt" target="strony">Z23_kod</a>
+    <br>
+    <a href="z25_kod.txt" target="strony">Z25_kod</a>
 </td>
 </tr>
 </table>
