--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 <a HREF="zad25_żur/zur_z25.html" target="strony">Zadanie 25</a>
 <br>
 <a HREF="zad32_żur/zur_z32.html" target="strony">Zadanie 32</a>
+<br>
+<a HREF="zad33_żur/zur_z33.html" target="strony">Zadanie 33</a>
+<br>
+<a HREF="zad34_żur/zur_z34.html" target="strony">Zadanie 34</a>
+<br>
+<a HREF="zad35_żur/zur_z35.html" target="strony">Zadanie 35</a>
+<br>
+<a HREF="zad36_żur/zur_z36.html" target="strony">Zadanie 36</a>
 </td>
 <td align=center><iframe width=650 height=650 name="strony" src="start.html" border="0"></iframe>
 </td>
@@ -95,6 +103,14 @@
     <a href="z23_kod.txt" target="strony">Z23_kod</a>
     <br>
     <a href="z25_kod.txt" target="strony">Z25_kod</a>
+    <br>
+    <a href="z33_kod.txt" target="strony">Z33_kod</a>
+    <br>
+    <a href="z34_kod(html).txt" target="strony">Z34_kod(html)</a>
+    <br>
+    <a href="z34_kod(css).txt" target="strony">Z34_kod(css)</a>
+    <br>
+    <a href="z36_kod.txt" target="strony">Z36_kod</a>
 </td>
 </tr>
 </table>
