--- a/zad25_żur/zur_z25.html
+++ b/zad25_żur/zur_z25.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Właściwości czcionek-Kruk</title>
+<title>Właściwości czcionek-Żur</title>
 <link href = "zur_z25.css" rel="stylesheet" type = "text/css"/>
 </head>
 <body>
-<div class="nazwisko">Wiktor Żur klasa 1P, układ 9</div>
+<div class="nazwisko">Wiktor Żur klasa 1P, układ 1</div>
 <div class="akapit">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Akapit 1 - do prawej </div>
 
 
